Fix white space crolling

--- a/src/features/layout/components/MainBackground/MainBackground.module.css
+++ b/src/features/layout/components/MainBackground/MainBackground.module.css
@@ -1,13 +1,18 @@
 .backgroundContainer {
   position: fixed;
-  inset: 0;
+  width: 100%;
+  height: 100vh;
   z-index: -1;
   background-color: var(--main-neutral-blue);
 }
 
 .backgroundImage {
+  max-width: 100%;
   width: 100%;
   min-height: 100%;
+  height: auto;
   object-fit: cover;
   object-position: center center;
+  transform: translateZ(0px);
+  backface-visibility: hidden;
 }
